Fix: Break at word, not letter

--- a/src/popup/scss/box.scss
+++ b/src/popup/scss/box.scss
@@ -232,7 +232,7 @@
     &.box-content-row-input, &.box-content-row-slider, &.box-content-row-multi {
         display: flex;
         align-items: center;
-        word-break: break-all;
+        //word-break: break-all;
     }
 
     &.box-content-row-multi {
